Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Discovery__c/Discovery__c.object-meta.xml
<CustomObject>
    <label>Discovery</label>
    <pluralLabel>Discoveries</pluralLabel>
    <nameField>
        <label>Discovery</label>
        <type>AutoNumber</type>
        <displayFormat>DISC-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>