Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Discovery__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Number</type>
    <precision>1</precision>
    <scale>0</scale>
    <inlineHelpText>Your rating of this resource from 1 (poor) to 5 (excellent).</inlineHelpText>
</CustomField>