Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Discovery__c/fields/Related_Certification__c.field-meta.xml
<CustomField>
    <fullName>Related_Certification__c</fullName>
    <label>Related Certification</label>
    <type>Lookup</type>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Discoveries</relationshipLabel>
    <relationshipName>Discoveries</relationshipName>
    <inlineHelpText>Link this resource to a certification you are studying for.</inlineHelpText>
</CustomField>