Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Discovery__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>Comma-separated tags for filtering (e.g. 'admin,flow,automation').</inlineHelpText>
</CustomField>