Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Discovery__c/fields/Trailblazer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_Profile__c</fullName>
    <label>Trailblazer Profile</label>
    <type>Lookup</type>
    <referenceTo>Trailblazer_Profile__c</referenceTo>
    <relationshipLabel>Discoveries</relationshipLabel>
    <relationshipName>Discoveries</relationshipName>
    <inlineHelpText>The Trailblazer profile this discovery is associated with.</inlineHelpText>
</CustomField>