Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Discovery__c/validationRules/Rating_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Range</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Rating__c)), OR(Rating__c &lt; 1, Rating__c &gt; 5))</errorConditionFormula>
    <errorMessage>Rating must be between 1 and 5.</errorMessage>
</ValidationRule>